--- a/htpc/docker-compose.yml
+++ b/htpc/docker-compose.yml
@@ -56,7 +56,18 @@ services:
     ports:
       - 8686:8686
     restart: unless-stopped
-
+overseerr:
+    image: lscr.io/linuxserver/overseerr:latest
+    container_name: overseerr
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Australia/Perth
+    volumes:
+      - /opt/htpc/overseerr/config:/config
+    ports:
+      - 5055:5055
+    restart: unless-stopped
 
 
 
